Primera implemetacion de sucursales con areas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,6 @@ spring.jpa.defer-datasource-initialization=true
 
 spring.application.name=scaffolding
 
-logging.level.root=TRACE
+##logging.level.root=TRACE
 
 
